--- a/css files/create-class6.css
+++ b/css files/create-class6.css
@@ -5,15 +5,15 @@
 }
 
 .wrapper{
-    border-radius: 5px;
+border-radius: 5px;
   max-width: 450px;
   width: 100%;
   background: #fff;
-  margin: 20px auto;
+ 
   padding: 30px;
   /* border: solid #1935DA 1px; */
   /* box-shadow: 1px 1px 2px rgba(0,0,0,0.125); */
-  margin-top: 100px;
+  margin-top: 2%;
 }
 
 .label{
@@ -30,6 +30,11 @@
     margin-bottom: 20px;
 }
 
+.cancelbtn{
+    text-decoration: none;
+    padding-bottom: 3%;
+}
+
 #cName{
     border: solid black 2px;
    border-radius: 5px;
@@ -44,6 +49,11 @@
 #semester{
     display: flex;
     flex-direction: column;
+    
+}
+
+#semester select{
+    border: solid 2px #1935DA;
     
 }
 
@@ -74,7 +84,46 @@
   color: #fff;
   border: none;
   border-radius: 5px;
-  padding: 13px 50px;
+  height: 45px;
+  width: 192px;
   font-weight: bold;
   cursor: pointer;
+  margin-bottom: 1%;
+}
+
+.functions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.class-name textarea{
+    border: solid 2px #1935DA;
+}
+
+#returnbtn{
+background-color: #fff;
+  color: #1935DA;
+  border: solid 2px #fff;
+  border-radius: 5px;
+  height: 45px;
+  width: 192px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#deletebtn{
+    background-color:rgb(240, 0, 0);
+  color: #fff;
+  border: solid 2px #fff;
+  border-radius: 5px;
+  height: 45px;
+  width: 192px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#title-gname{
+    font-size: 1.2rem;
+    text-align: center;
 }
